--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "react-dom": "^18.3.0",
         "react-hook-form": "^7.54.2",
         "react-select": "^5.9.0",
+        "recharts": "^2.15.1",
         "tailwind-merge": "^2.6.0",
         "tailwindcss-animate": "^1.0.7",
         "yup": "^1.6.1",
