--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
         "@hookform/resolvers": "^3.10.0",
         "@radix-ui/react-dialog": "^1.1.4",
         "@radix-ui/react-label": "^2.1.1",
+        "@radix-ui/react-popover": "^1.1.6",
         "@radix-ui/react-select": "^2.1.4",
-        "@radix-ui/react-slot": "^1.1.1",
+        "@radix-ui/react-slot": "^1.1.2",
         "@radix-ui/react-tabs": "^1.1.3",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "date-fns": "^3.6.0",
         "input-otp": "^1.4.2",
         "lucide-react": "^0.471.1",
         "next": "15.1.4",
         "react": "^18.3.0",
         "react-circular-progressbar": "^2.1.0",
+        "react-day-picker": "^8.10.1",
         "react-dom": "^18.3.0",
         "react-hook-form": "^7.54.2",
         "react-select": "^5.9.0",
