--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@radix-ui/react-radio-group": "^1.2.3",
         "@radix-ui/react-select": "^2.1.4",
         "@radix-ui/react-slot": "^1.1.2",
+        "@radix-ui/react-switch": "^1.1.3",
         "@radix-ui/react-tabs": "^1.1.3",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
@@ -23,6 +24,7 @@
         "input-otp": "^1.4.2",
         "lucide-react": "^0.471.1",
         "next": "15.1.4",
+        "next-themes": "^0.4.4",
         "react": "^18.3.0",
         "react-circular-progressbar": "^2.1.0",
         "react-day-picker": "^8.10.1",
@@ -30,6 +32,7 @@
         "react-hook-form": "^7.54.2",
         "react-select": "^5.9.0",
         "recharts": "^2.15.1",
+        "sonner": "^2.0.1",
         "tailwind-merge": "^2.6.0",
         "tailwindcss-animate": "^1.0.7",
         "use-debounce": "^10.0.4",
