--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "date-fns": "^3.6.0",
         "input-otp": "^1.4.2",
         "lucide-react": "^0.471.1",
+        "motion": "^12.6.2",
         "next": "15.1.4",
         "next-themes": "^0.4.4",
         "react": "^18.3.0",
