--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "clsx": "^2.1.1",
         "cmdk": "^1.1.1",
         "date-fns": "^3.6.0",
+        "framer-motion": "^12.12.1",
         "input-otp": "^1.4.2",
         "lucide-react": "^0.471.1",
         "motion": "^12.6.2",
