--- a/package.json
+++ b/package.json
@@ -1,65 +1,67 @@
 {
-    "name": "kg-sellers-frontend",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "dev": "next dev",
-        "build": "next build",
-        "start": "next start",
-        "lint": "next lint"
-    },
-    "dependencies": {
-        "@hookform/resolvers": "^3.10.0",
-        "@radix-ui/react-accordion": "^1.2.10",
-        "@radix-ui/react-checkbox": "^1.3.2",
-        "@radix-ui/react-dialog": "^1.1.13",
-        "@radix-ui/react-label": "^2.1.1",
-        "@radix-ui/react-popover": "^1.1.6",
-        "@radix-ui/react-radio-group": "^1.2.3",
-        "@radix-ui/react-select": "^2.1.4",
-        "@radix-ui/react-separator": "^1.1.3",
-        "@radix-ui/react-slot": "^1.2.0",
-        "@radix-ui/react-switch": "^1.1.3",
-        "@radix-ui/react-tabs": "^1.1.3",
-        "@tanstack/react-query": "^5.80.6",
-        "@tanstack/react-query-devtools": "^5.80.6",
-        "axios": "^1.9.0",
-        "class-variance-authority": "^0.7.1",
-        "clsx": "^2.1.1",
-        "cmdk": "^1.1.1",
-        "date-fns": "^3.6.0",
-        "framer-motion": "^12.12.1",
-        "input-otp": "^1.4.2",
-        "jwt-decode": "^4.0.0",
-        "lucide-react": "^0.471.1",
-        "motion": "^12.6.2",
-        "next": "15.1.4",
-        "next-auth": "^4.24.11",
-        "next-themes": "^0.4.4",
-        "react": "^18.3.0",
-        "react-circular-progressbar": "^2.1.0",
-        "react-day-picker": "^8.10.1",
-        "react-dom": "^18.3.0",
-        "react-error-boundary": "^6.0.0",
-        "react-hook-form": "^7.54.2",
-        "react-select": "^5.9.0",
-        "recharts": "^2.15.1",
-        "sonner": "^2.0.1",
-        "tailwind-merge": "^2.6.0",
-        "tailwindcss-animate": "^1.0.7",
-        "use-debounce": "^10.0.4",
-        "yup": "^1.6.1",
-        "zod": "^3.24.1"
-    },
-    "devDependencies": {
-        "@eslint/eslintrc": "^3",
-        "@types/node": "^20",
-        "@types/react": "^19",
-        "@types/react-dom": "^19",
-        "eslint": "^9",
-        "eslint-config-next": "15.1.4",
-        "postcss": "^8",
-        "tailwindcss": "^3.4.1",
-        "typescript": "^5"
-    }
+  "name": "kg-sellers-frontend",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "prepare": "husky"
+  },
+  "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
+    "@radix-ui/react-accordion": "^1.2.10",
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-radio-group": "^1.2.3",
+    "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-separator": "^1.1.3",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-switch": "^1.1.3",
+    "@radix-ui/react-tabs": "^1.1.3",
+    "@tanstack/react-query": "^5.80.6",
+    "@tanstack/react-query-devtools": "^5.80.6",
+    "axios": "^1.9.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "date-fns": "^3.6.0",
+    "framer-motion": "^12.12.1",
+    "input-otp": "^1.4.2",
+    "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.471.1",
+    "motion": "^12.6.2",
+    "next": "15.1.4",
+    "next-auth": "^4.24.11",
+    "next-themes": "^0.4.4",
+    "react": "^18.3.0",
+    "react-circular-progressbar": "^2.1.0",
+    "react-day-picker": "^8.10.1",
+    "react-dom": "^18.3.0",
+    "react-error-boundary": "^6.0.0",
+    "react-hook-form": "^7.54.2",
+    "react-select": "^5.9.0",
+    "recharts": "^2.15.1",
+    "sonner": "^2.0.1",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.4",
+    "yup": "^1.6.1",
+    "zod": "^3.24.1"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "^3",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "15.1.4",
+    "husky": "^9.1.7",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
+  }
 }
