--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-separator": "^1.1.3",
+    "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
@@ -41,6 +42,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.0",
+    "react-easy-crop": "^5.5.0",
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.54.2",
     "react-select": "^5.9.0",
